fixed flair color and spacing

--- a/stylesheets/components/_flair.scss
+++ b/stylesheets/components/_flair.scss
@@ -1,5 +1,9 @@
 li.flair {
+    a {
+        @include link;
+    }
     .pfp {
         vertical-align: middle;
+        margin-right: 10px;
     }
 }
